fix: change header title and disable horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -15,8 +15,10 @@
   transform: translateY(-2px);
 }
 
-body {
+html, body {
   -webkit-tap-highlight-color: transparent;
   scroll-behavior: smooth;
   margin: 0;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
